correct z-index

--- a/#src/scss/_lost.scss
+++ b/#src/scss/_lost.scss
@@ -8,7 +8,7 @@
     z-index: 7;
 }
 .lost-slider {
-    z-index: 7;
+    z-index: 1;
     &__item {
         z-index: 7;
     }
